--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1 style="text-align: center;">Calculator</h1>
     <div class="container">
         <div class="inerBox"> 
         <div class="main">
